changed made to README doc

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </ul> 
         </aside>
         </header>
-
+<!-- Changed "hero" class to <object> tag -->
     <object></object>
 
     <br>
@@ -81,7 +81,8 @@
             </p>
         </section>
         
-
+<!-- changed the div footer to <footer> tag
+ -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
