updating README & adding comments into codes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords=" content="SEO, Search, search-engine-optimization, search engine, mobile devices, cell phone, searching, mobile app">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>HoriSEOn</title>
-    <!-- updated the title of the page -->
+    <!-- ^^ updated the title of the page -->
 </head>
 
 <body>
