proof reading docs and adding links for additional resources

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- To complete this portion of the project, I used some of the information discussed in class, as well as looking at https://www.freecodecamp.org/news/semantic-html5-elements/ &  -->
+<!-- To complete this portion of the project, I used some of the information discussed in class, as well as looking at https://www.freecodecamp.org/news/semantic-html5-elements/ , https://www.youtube.com/watch?v=KcxmB6leB1c ,  -->
 
 <!DOCTYPE html>
 <html lang="en-us">
