adding additional comments and proof reading README for spelling errors

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- To complete this portion of the project, I used some of the information discussed in class, as well as looking at https://www.freecodecamp.org/news/semantic-html5-elements/ , https://www.youtube.com/watch?v=KcxmB6leB1c ,  -->
+<!-- To complete this portion of the project, I used some of the information discussed in class, as well as looking at https://www.freecodecamp.org/news/semantic-html5-elements/ & https://www.youtube.com/watch?v=KcxmB6leB1c . -->
 
 <!DOCTYPE html>
 <html lang="en-us">
@@ -18,7 +18,7 @@
     <header> 
         <h1>Hori<span class="seo">seo</span>n</h1>
         <aside>
-            <!-- ^included the aside tag to get the links to sit on the side of the Horiseon text. also switched names of links, added titles to each link when overing got the first link to work properly-->
+            <!-- ^included the aside tag to get the links to sit on the side of the Horiseon text. also switched names of links, added titles to each link when overing got the first link to work properly in this code-->
             <ul>
                 <li>
                     <a href="#SEO" title="Jump to Search Engine Optimization section">Search Engine Optimization</a>
